--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
+    "@storybook/addon-actions": "^5.0.6",
+    "@storybook/addon-knobs": "^5.0.6",
+    "@storybook/addon-links": "^5.0.6",
+    "@storybook/addon-notes": "^5.0.6",
     "@storybook/vue": "^5.0.6",
     "@vue/cli-plugin-babel": "^3.5.0",
     "@vue/cli-plugin-eslint": "^3.5.0",
@@ -28,6 +32,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
+    "storybook-addon-vue-info": "^1.0.1",
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.10"
   }
