--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "storybook": "start-storybook -p 9000",
     "build-storybook": "build-storybook -c .storybook -o storybook-build"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn build-storybook"
+    }
+  },
   "dependencies": {
     "core-js": "^2.6.5",
     "vue": "^2.6.6",
@@ -31,6 +36,7 @@
     "babel-preset-vue": "^2.0.2",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "husky": "^1.3.1",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "storybook-addon-vue-info": "^1.0.1",
