--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@storybook/addon-knobs": "^5.0.6",
     "@storybook/addon-links": "^5.0.6",
     "@storybook/addon-notes": "^5.0.6",
+    "@storybook/addon-viewport": "^5.0.9",
     "@storybook/vue": "^5.0.6",
     "@vue/cli-plugin-babel": "^3.5.0",
     "@vue/cli-plugin-eslint": "^3.5.0",
